--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,10 +42,15 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --primary-color: white;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
-
+    --border-width: 2px;
+    --border-color: #ffffff60;
+    --border-radius: 2vw;
+    --opacity: 0.7;
+    --transition: opacity 0.3s ease-in-out;
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
@@ -94,10 +99,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
-
 a {
   color: inherit;
   text-decoration: none;
+}
+h1, h2, h3, h4, h5, h6, p, a, span {
+  color: var(--primary-color);
+  margin: 0.5vh 0;
 }
 
 @media (prefers-color-scheme: dark) {
